converting watching to a polling mechanism
Signed-off-by: Steve Hawkins <shawkins@redhat.com>